add box component, hovering features on nav

--- a/src/App.css
+++ b/src/App.css
@@ -115,12 +115,15 @@ body,
   margin-bottom: 8px;
 }
 
-#currency-filters-container {
-  margin-bottom: 24px;
+.total {
+  display: flex;
+  margin: 0;
+  font-size: 1.8rem;
 }
 
-#currency-filters-container h3 {
-  margin-bottom: 4px;
+.total-value {
+  color: var(--bcla);
+  margin-left: auto;
 }
 
 input.quantity {
@@ -130,34 +133,11 @@ input.quantity {
   border: 1px solid var(--black);
 }
 
-/* Codecademy Store Styles */
+/* Original Styles */
 :root {
   --black: #131b3c;
-  --purple: #7000ec;
+  --red: #e5537f;
   --border-radius: 4px;
-}
-
-.currency-button {
-  background: white;
-  border: 1px solid var(--black);
-  padding: 8px;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.currency-button:first-of-type {
-  border-top-left-radius: var(--border-radius);
-  border-bottom-left-radius: var(--border-radius);
-}
-
-.currency-button:last-of-type {
-  border-top-right-radius: var(--border-radius);
-  border-bottom-right-radius: var(--border-radius);
-}
-
-.currency-button.selected {
-  background: var(--black);
-  color: white;
 }
 
 .item > h3 {
@@ -176,7 +156,7 @@ input.quantity {
 }
 
 .price {
-  color: var(--purple);
+  color: var(--black);
 }
 
 .add-to-cart-button {
@@ -193,31 +173,6 @@ input.quantity {
 .add-to-cart-button:hover {
   color: white;
   background: var(--black);
-}
-
-#cart-container {
-  margin: 0 -45px;
-  padding: 12px 45px;
-  padding-bottom: 24px;
-  background: #f2f2f2;
-  position: sticky;
-  bottom: 0;
-}
-
-#cart-container > hr {
-  margin: 0 -45px;
-  margin-bottom: 12px;
-}
-
-.total {
-  display: flex;
-  margin: 0;
-  font-size: 1.8rem;
-}
-
-.total-value {
-  color: var(--purple);
-  margin-left: auto;
 }
 
 .item-quantity {
@@ -252,12 +207,18 @@ input.quantity {
   letter-spacing: 0.6px;
   gap: 20px;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
 li {
   list-style: none;
+}
+ul li a:hover,
+.fa-heart:hover,
+.fa-bag-shopping:hover {
+  color: var(--red);
 }
 .uppercase {
   text-transform: uppercase;
@@ -329,6 +290,10 @@ button {
   font-weight: bold;
   color: #fff;
   border-radius: 5px;
+}
+.btn-primary:hover {
+  background: #ea5a72;
+  cursor: pointer;
 }
 .top {
   margin-top: 80px;
@@ -471,45 +436,6 @@ button {
 }
 /*-----------other--------------*/
 
-/*----------------ngan bo them vo Aug 22nd 2023------------------*/
-footer {
-  color: #63605a;
-  padding: 80px 0;
-  margin: 30px -45px 0px -45px;
-  background: #f2f2f2;
-}
-footer h1 {
-  margin-bottom: 30px;
-  color: #e94560;
-  font-weight: 800;
-  font-style: italic;
-}
-footer .img {
-  background-color: #0c2a4d;
-  padding: 15px 20px;
-  border-radius: 5px;
-}
-footer .img i {
-  font-size: 20px;
-  margin: 5px;
-}
-footer .img span {
-  margin-top: 5px;
-}
-footer p {
-  font-size: 14px;
-  font-weight: 300;
-  opacity: 0.5;
-  margin-bottom: 20px;
-}
-footer h2 {
-  margin-bottom: 20px;
-}
-footer li {
-  margin-bottom: 10px;
-  opacity: 0.5;
-}
-
 .searchTerm_header {
   display: flex;
   justify-content: space-between;
@@ -532,8 +458,17 @@ footer li {
   gap: 20px;
 }
 
-.footer_list {
-  margin-left: -30px;
+footer {
+  color: #63605a;
+  padding: 80px 0;
+  margin: 30px -45px 0px -45px;
+  background: #f2f2f2;
+}
+
+footer li {
+  margin-bottom: 10px;
+  opacity: 0.5;
+  margin-left: -40px;
 }
 
 .item i {
@@ -545,7 +480,11 @@ footer li {
 }
 
 .item i:hover {
-  color: var(--purple);
+  color: var(--red);
+}
+
+.itemName {
+  color: #878584;
 }
 
 .badge:after {
@@ -560,4 +499,16 @@ footer li {
   top: -10px;
   opacity: 0.9;
 }
-/*----------------ngan bo them vo Aug 22nd 2023------------------*/
+
+.announce_box {
+  border: 1px solid var(--black);
+  border-radius: var(--border-radius);
+  margin-top: 30px;
+  padding: 200px 0;
+  text-align: center;
+}
+
+.announce_box_cart {
+  width: 40%;
+  margin: auto;
+}
